<!--
  ~ Copyright (c) 2008-2020, Hazelcast, Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>modulepath-tests</name>
    <artifactId>modulepath-tests</artifactId>
    <description>Hazelcast modulepath tests</description>
    <packaging>jar</packaging>

    <parent>
        <groupId>com.hazelcast</groupId>
        <artifactId>hazelcast-root</artifactId>
        <version>4.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>

        <!-- needed for CheckStyle -->
        <main.basedir>${project.parent.basedir}</main.basedir>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration combine.self="override">
                    <release>9</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration combine.self="override">
                    <!--
                    Allow access to Operating system metrics:
                        open jdk.management/com.sun.management.internal

                    Avoid warnings caused by reflection in
                    SelectorOptimizer:
                        open java.base/sun.nio.ch
                    FilteringClassLoader:
                        open java.base/java.lang
                    TimedMemberStateFactoryHelper:
                        open java.management/sun.management

                    Powermock issue workaround (https://github.com/powermock/powermock/issues/905):
                        export java.xml/jdk.xml.internal
                     -->
                    <argLine>
                        ${vmHeapSettings}
                        --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
                        --add-opens java.base/sun.nio.ch=com.hazelcast.core
                        --add-opens java.base/java.lang=com.hazelcast.core
                        --add-opens java.management/sun.management=com.hazelcast.core
                        --add-exports java.xml/jdk.xml.internal=com.hazelcast.core
                        --illegal-access=warn
                        -Dhazelcast.phone.home.enabled=false
                        -Dlog4j.skipJansi=true
                        ${extraVmArgs}
                    </argLine>
                </configuration>
            </plugin>

            <!-- Disable spotbugs as we have nothing to analyze yet (which makes the plugin unhappy). -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${maven.spotbugs.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
